--- a/batman-media-queries.css
+++ b/batman-media-queries.css
@@ -9,13 +9,65 @@
 ██   ██ ██           ██ ██  ██     ██    ██    ██ ██
 ██████  ███████ ███████ ██   ██    ██     ██████  ██
 */
-@media (min-width: 1280px) {
+@media screen and (min-width: 1280px) {
   nav ul li a:hover {
     color: rgb(253, 227, 17);
     /*color: rgb(255, 199, 108);*/
   }
 
-  .wrappers {
+  .wrappers {}
+
+  /*
+   ██████   █████  ██      ██      ███████ ██████  ██    ██
+  ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
+  ██   ███ ███████ ██      ██      █████   ██████    ████
+  ██    ██ ██   ██ ██      ██      ██      ██   ██    ██
+   ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
+  */
+  .container {
+    background-color: rgb(38, 38, 38);
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    padding: 0 2%;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    box-sizing: border-box;
+    margin-bottom: 70px;
+  }
+
+  .box {
+    /*background-color: rgb(255, 199, 108);*/
+    /*background-color: rgb(255, 237, 0);*/
+    background-color: rgb(253, 227, 17);
+    color: rgb(38, 38, 38);
+    flex: 1;
+    overflow: hidden;
+    transition: .5s;
+    margin: 0 2%;
+    box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
+    line-height: 0;
+  }
+
+  .box>img {
+    width: 200%;
+    height: calc(100% - 10vh);
+    object-fit: cover;
+    transition: .5s;
+  }
+
+  .box>span {
+    display: block;
+    height: 10vh;
+  }
+
+  .box:hover {
+    flex: 1 1 50%;
+  }
+
+  .box:hover>img {
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -28,7 +80,6 @@
 */
 @media screen and (min-width: 750px) and (max-width: 1280px) {
   .wrappers {}
-
 
   /*.profile-logo {
     background-size: 140%;
@@ -52,14 +103,12 @@
     width: 100vw;
     display: flex;
     justify-content: center;
-    
   }
 
-  nav ul {
-  }
+  nav ul {}
 
-  nav ul li {
-}
+  nav ul li {}
+
   nav ul li a {
     font-size: 1rem;
   }
@@ -67,7 +116,6 @@
   #hero {
     background-attachment: local;
   }
-
 
   .hero-text {
     width: 70vw;
@@ -89,7 +137,6 @@
   /*.boxes {
     margin: 0;
   }*/
-  
   .wrappers {}
 
   .hero-to-movies {}
@@ -118,8 +165,7 @@
   ██ ███ ██ ██   ██ ██   ██ ██      ██      ██      ██   ██      ██
    ███ ███  ██   ██ ██   ██ ██      ██      ███████ ██   ██ ███████
   */
-  .wrappers {
-  }
+  .wrappers {}
 
   .actors-to-gallery {
     background-position: left;
@@ -132,9 +178,7 @@
     font-size: 2rem;
   }
 
-  .feature p {
-
-  }
+  .feature p {}
 
   .picture {
     height: 45vh;
@@ -156,32 +200,65 @@
     height: 50vh;
     width: 100vw;
   }
+}
 
-  /*
+/*
+████████  █████  ██████  ██      ███████ ████████
+   ██    ██   ██ ██   ██ ██      ██         ██
+   ██    ███████ ██████  ██      █████      ██
+   ██    ██   ██ ██   ██ ██      ██         ██
+   ██    ██   ██ ██████  ███████ ███████    ██
+*/
+/*
   ███    ███  ██████  ██████  ██ ██      ███████
   ████  ████ ██    ██ ██   ██ ██ ██      ██
   ██ ████ ██ ██    ██ ██████  ██ ██      █████
   ██  ██  ██ ██    ██ ██   ██ ██ ██      ██
   ██      ██  ██████  ██████  ██ ███████ ███████
   */
-  /*
+/*
    ██████   █████  ██      ██      ███████ ██████  ██    ██
   ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
   ██   ███ ███████ ██      ██      █████   ██████    ████
   ██    ██ ██   ██ ██      ██      ██      ██   ██    ██
    ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
   */
-  /*.container {
-    height: 545px;
+@media screen and (max-width: 1280px) {
+  .gallery-boxes {
+    width: 100%;
+    height: 100%;
+    /*overflow: hidden;*/
+    text-align: center;
+    
+  }
+  .container {
+    background-color: rgb(38, 38, 38);
+    width: 100%;
+    height: 100%;
+    /*margin: 50px;*/
+    
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
   }
 
-  .box>img {
-    width: 200%;
-    height: calc(100% - 10vh);
+  .box {
+    width: 100%;
+    /*height: 50%;*/
+  }
+  .box-image {
+    border: 10px solid whitesmoke;
+    width: 50vw;
+    max-width: 80vw;
+    height: 45vh;
+  }
+  span {
+    display: block;
+    color: whitesmoke;
   }
 
-  .box>span {
-    font-size: 1.9rem;
+  #footer {
+    margin-bottom: -380px;
   }
-  */
 }
