--- a/batman.css
+++ b/batman.css
@@ -358,65 +358,7 @@ p {
   background-size: 100vw 100%;
 }
 
-/*
- ██████   █████  ██      ██      ███████ ██████  ██    ██
-██       ██   ██ ██      ██      ██      ██   ██  ██  ██
-██   ███ ███████ ██      ██      █████   ██████    ████
-██    ██ ██   ██ ██      ██      ██      ██   ██    ██
- ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
-*/
-/*#gallery {
-  background-color: rgb(38, 38, 38);
-}*/
-.container {
-  background-color: rgb(38, 38, 38);
-  display: flex;
-  width: 100%;
-  height: 100vh;
-  padding: 0 2%;
-  padding-top: 70px;
-  padding-bottom: 70px;
-  box-sizing: border-box;
-  margin-bottom: 70px;
-}
 
-.box {
-  /*background-color: rgb(255, 199, 108);*/
-  /*background-color: rgb(255, 237, 0);*/
-  background-color: rgb(253, 227, 17);
-  color: rgb(38, 38, 38);
-  flex: 1;
-  overflow: hidden;
-  transition: .5s;
-  margin: 0 2%;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
-  line-height: 0;
-}
-
-.box>img {
-  width: 200%;
-  height: calc(100% - 10vh);
-  object-fit: cover;
-  transition: .5s;
-}
-
-.box>span {
-  display: block;
-  height: 10vh;
-}
-
-.box:hover {
-  flex: 1 1 50%;
-}
-
-.box:hover>img {
-  width: 100%;
-  height: 100%;
-}
-
-/*.separator {
-  background-color: rgb(38, 38, 38);
-}*/
 /*
 ███████  ██████   ██████  ████████ ███████ ██████
 ██      ██    ██ ██    ██    ██    ██      ██   ██
@@ -424,7 +366,7 @@ p {
 ██      ██    ██ ██    ██    ██    ██      ██   ██
 ██       ██████   ██████     ██    ███████ ██   ██
 */
-footer {
+#footer {
   width: 100%;
   height: 100vh;
   /*  overflow: hidden;
