--- a/batman-media-queries.css
+++ b/batman-media-queries.css
@@ -249,16 +249,29 @@
   }
   .box-image {
     border: 10px solid whitesmoke;
-    width: 50vw;
-    max-width: 80vw;
-    height: 45vh;
+    width: 90vw;
+    max-width: 100vw;
+    
+    height: 40vh;
+    max-height: 70vh;
   }
   span {
     display: block;
     color: whitesmoke;
   }
 
-  #footer {
-    margin-bottom: -380px;
+    
+  .footer-img {
+    height: 60vh;
+    width: 100%;
+    background-image: url(img/wrapper/rain.jpg);
+    background-repeat: no-repeat;
+    background-size: 50% 50%;
+    background-position: right;
+
   }
+
+  /*#footer {
+    margin-bottom: -380px;
+  }*/
 }
