--- a/batman.css
+++ b/batman.css
@@ -21,14 +21,6 @@ html, body {
   /*height: 100%;*/
 }
 
-header {
-  height: 8vh;
-  position: fixed;
-  width: 100%;
-  z-index: 10;
-  /*display: block;*/
-}
-
 /*
 ███    ██  █████  ██    ██
 ████   ██ ██   ██ ██    ██
@@ -36,54 +28,55 @@ header {
 ██  ██ ██ ██   ██  ██  ██
 ██   ████ ██   ██   ████
 */
-.logo {
+header {
   height: 8vh;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+}
+
+.logo {
   display: block;
+  height: 8vh;
+  left: 5px;
   position: absolute;
-  left: 10px;
+  
 }
 
 nav {
-  /*background-color: rgb(51, 51, 51);*/
-  background-color: rgba(38, 38, 38, 0.85);
   height: 8vh;
   width: 100%;
+  background-color: rgba(38, 38, 38, 0.85);
+
+
 }
 
 nav ul {
+  width: 100%;
   display: flex;
   justify-content: center;
+  text-align: center;
 }
 
 nav ul li {
   line-height: 8vh;
-  display: inline-block;
-  /* puts them on same ROW, instead column */
-  list-style: none;
   /* same as parent's height; centers the content vertically */
-  /* float: left; removes the space between links */
-  position: relative;
-  overflow: hidden;
+  list-style: none;
+
 }
 
 nav ul li a {
   color: white;
   display: block;
   /* clickable on outside text */
-  /*font-family: 'Cormorant', sans-serif;*/
   font-family: 'Lato', sans-serif;
-  font-size: 1.2em;
+  font-size: 1em;
   font-weight: 500;
-  text-align: center;
   text-decoration: none;
   text-transform: capitalize;
-  width: 120px;
-  transition: color .6s ease 0s;
-  transition: background-color .8s ease 0s;
-  /*
-  padding: 0 20px;
-  margin: 0 auto;
-  */
+  /*text-align: center;*/
+  min-width: 10vw;
+  max-width: 120px;
 }
 
 /*
@@ -328,6 +321,7 @@ p {
   height: 92vh;
   width: 100%;
 }
+
 .hero-to-movies,
 .movies-to-actors,
 .actors-to-gallery {
@@ -357,7 +351,6 @@ p {
   width: 100%;
   background-size: 100vw 100%;
 }
-
 
 /*
 ███████  ██████   ██████  ████████ ███████ ██████
@@ -834,6 +827,5 @@ p {
   transform: scale(1.2);
   border-radius: 17px;
   background: radial-gradient(circle at 30% 107%, rgba(252, 243, 150, 0.7) 0%, rgba(252, 243, 150, 0.7) 5%, rgba(252, 89, 73, 0.7) 45%, rgba(214, 36, 159, 0.7) 60%, rgba(40, 90, 235, 0.7) 90%);
-  
-/*  background: radial-gradient(circle at 30% 107%, rgb(252, 243, 150) 0%, rgb(252, 243, 150) 5%, rgb(252, 89, 73) 45%, rgb(214, 36, 159) 60%, rgb(40, 90, 235) 90%);*/
+  /*  background: radial-gradient(circle at 30% 107%, rgb(252, 243, 150) 0%, rgb(252, 243, 150) 5%, rgb(252, 89, 73) 45%, rgb(214, 36, 159) 60%, rgb(40, 90, 235) 90%);*/
 }
