--- a/batman.css
+++ b/batman.css
@@ -37,18 +37,15 @@ header {
 
 .logo {
   display: block;
-  height: 8vh;
   left: 5px;
   position: absolute;
-  
+  height: 8vh;
 }
 
 nav {
   height: 8vh;
   width: 100%;
   background-color: rgba(38, 38, 38, 0.85);
-
-
 }
 
 nav ul {
@@ -70,13 +67,12 @@ nav ul li a {
   display: block;
   /* clickable on outside text */
   font-family: 'Lato', sans-serif;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 500;
   text-decoration: none;
   text-transform: capitalize;
   /*text-align: center;*/
-  min-width: 10vw;
-  max-width: 120px;
+  
 }
 
 /*
