navbar responsive - ok

--- a/batman-media-queries.css
+++ b/batman-media-queries.css
@@ -11,8 +11,6 @@
 */
 @media screen and (min-width: 1280px) {
   header {
-
-  /*  display: block;*/
   }
 
   .logo {
@@ -127,8 +125,7 @@
   
   
   nav ul li a {
-    min-width: 7vw;
-    padding: 0 10px;
+    padding: 0 12px;
   }
   
 }
@@ -155,30 +152,53 @@
 ██      ██  ██████  ██████  ██ ███████ ███████
 */
 @media screen and (max-width: 750px) {
-  .logo {
-    left: 0;
-    width: 12vw;
+  body {
+    overflow: hidden;
   }
-  nav img {
+  header {
+    height: 12vh;
   }
 
+  .nav-link {
+    /*background-color: greenyellow;*/
+    display: inline-block;
+    width: 24vw;
+    height: 15vh;
+    position: absolute;
+    left: 0;
+    overflow: hidden;
+  }
+
+  .logo {
+    /*background-color:  aquamarine;*/
+    max-width: 18vw;
+    height: 12vh;
+    display: block;
+    position: relative;
+  }
+  
   nav {
+    background-color: rgb(38, 38, 38);
+    height: 12vh;
     width: 100%;
     display: flex;
     justify-content: space-around;
   }
 
   nav ul {
+    position: absolute;
+    left: 8vw;
 }
   nav ul li {
-    
+    line-height: 12vh;
   }
 
   nav ul li a {
+    font-size: 0.9rem;
   }
 
   #hero {
-    /*background-attachment: local;*/
+    background-attachment: local;
   }
 
   .hero-text {
@@ -201,19 +221,45 @@
   /*.boxes {
     margin: 0;
   }*/
-  .wrappers {}
-
-  .hero-to-movies {}
 
   .feature {
     flex-basis: 80%;
-    margin-top: 350px;
   }
 
   .feature3 {
-    margin-top: 100px;
-    margin-bottom: 200px;
+    margin-top: 150px;
+/*    margin-top: 100px;
+    margin-bottom: 200px;*/
   }
+  /*
+  ███    ███  ██████  ██████  ██ ██      ███████
+  ████  ████ ██    ██ ██   ██ ██ ██      ██
+  ██ ████ ██ ██    ██ ██████  ██ ██      █████
+  ██  ██  ██ ██    ██ ██   ██ ██ ██      ██
+  ██      ██  ██████  ██████  ██ ███████ ███████
+  */
+  /*
+   █████  ███    ██  ██████ ██   ██  ██████  ██████  ███████
+  ██   ██ ████   ██ ██      ██   ██ ██    ██ ██   ██ ██
+  ███████ ██ ██  ██ ██      ███████ ██    ██ ██████  ███████
+  ██   ██ ██  ██ ██ ██      ██   ██ ██    ██ ██   ██      ██
+  ██   ██ ██   ████  ██████ ██   ██  ██████  ██   ██ ███████
+  */
+  #movies::before,
+  #actors::before,
+  #gallery::before {
+    height: 12vh;
+    margin-top: -12vh;
+  }
+  
+/*  #footer::before {
+    content: '';
+    display: block;
+    height: -70px;
+    margin-top: -70px;
+    visibility: hidden;
+  }*/
+
 
   /*
   ███    ███  ██████  ██████  ██ ██      ███████
@@ -229,7 +275,9 @@
   ██ ███ ██ ██   ██ ██   ██ ██      ██      ██      ██   ██      ██
    ███ ███  ██   ██ ██   ██ ██      ██      ███████ ██   ██ ███████
   */
-  .wrappers {}
+  .wrappers {
+    height: 88vh;
+  }
 
   .actors-to-gallery {
     background-position: left;
