--- a/style-media-queries.css
+++ b/style-media-queries.css
@@ -10,7 +10,6 @@
 ██████  ███████ ███████ ██   ██    ██     ██████  ██
 */
 @media screen and (min-width: 1280px) {
-
   nav ul li a {
     /*    min-width: 10vw;
     max-width: 120px;
@@ -114,13 +113,13 @@
   }
 
   .logo-list {
-    background-color: aqua;
+    /*background-color: aqua;*/
     max-width: 70%;
     width: 70%;
   }
 
   .logo-link {
-    background-color: yellow;
+    /*background-color: yellow;*/
     width: 100%;
     /*    position: absolute;
     left: 0;*/
@@ -129,7 +128,8 @@
   .logo {
     /*background-color:  aquamarine;*/
     max-width: 18vw;
-    width: 80%;
+    width: 100%;
+    height: 12vh;
   }
 
   nav {
@@ -227,7 +227,7 @@
     ██    ██ ██   ██ ██      ██      ██      ██   ██    ██
      ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
     */
-  @media screen and (max-width: 1280px) {
+  .gallery-boxes {
     width: 100%;
     height: 100%;
     /*overflow: hidden;*/
@@ -280,7 +280,11 @@
    ██    ██   ██ ██   ██ ██      ██         ██         ██
    ██    ██   ██ ██████  ███████ ███████    ██    ███████
 */
-@media screen and (min-width: 750px) and (max-width: 1280px) {}
+@media screen and (min-width: 750px) and (max-width: 1280px) {
+  .logo {
+  max-width: 100px;
+  }
+}
 
 /*
 ███    ███  ██████  ██████  ██ ██      ███████
@@ -292,6 +296,10 @@
 @media screen and (max-width: 750px) {
   body {
     overflow: hidden;
+  }
+
+  .logo {
+    /*background-color: aquamarine;*/
   }
 
   /*  .logo-list {
@@ -321,7 +329,7 @@
 
   /*.boxes {
     margin: 0;
-  }*/
+   }*/
   .feature {
     flex-basis: 80%;
   }
@@ -332,45 +340,3 @@
     margin-bottom: 200px;*/
   }
 }
-
-/*
-████████  █████  ██████  ██      ███████ ████████
-   ██    ██   ██ ██   ██ ██      ██         ██
-   ██    ███████ ██████  ██      █████      ██
-   ██    ██   ██ ██   ██ ██      ██         ██
-   ██    ██   ██ ██████  ███████ ███████    ██
-*/
-/*
-  ███    ███  ██████  ██████  ██ ██      ███████
-  ████  ████ ██    ██ ██   ██ ██ ██      ██
-  ██ ████ ██ ██    ██ ██████  ██ ██      █████
-  ██  ██  ██ ██    ██ ██   ██ ██ ██      ██
-  ██      ██  ██████  ██████  ██ ███████ ███████
-  */
-/*
-   ██████   █████  ██      ██      ███████ ██████  ██    ██
-  ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
-  ██   ███ ███████ ██      ██      █████   ██████    ████
-  ██    ██ ██   ██ ██      ██      ██      ██   ██    ██
-   ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
-  */
-@media screen and (max-width: 1280px) {
-  .gallery-boxes {
-    /*
-████████  █████  ██████  ██      ███████ ████████
-   ██    ██   ██ ██   ██ ██      ██         ██
-   ██    ███████ ██████  ██      █████      ██
-   ██    ██   ██ ██   ██ ██      ██         ██
-   ██    ██   ██ ██████  ███████ ███████    ██
-*/
-    /*
-  ███    ███  ██████  ██████  ██ ██      ███████
-  ████  ████ ██    ██ ██   ██ ██ ██      ██
-  ██ ████ ██ ██    ██ ██████  ██ ██      █████
-  ██  ██  ██ ██    ██ ██   ██ ██ ██      ██
-  ██      ██  ██████  ██████  ██ ███████ ███████
-  */
-    /*#footer {
-    margin-bottom: -380px;
-  }*/
-  }
