--- a/style-media-queries.css
+++ b/style-media-queries.css
@@ -10,6 +10,10 @@
 ██████  ███████ ███████ ██   ██    ██     ██████  ██
 */
 @media screen and (min-width: 1280px) {
+  nav ul {
+    /*margin-left: 21vw;*/
+  }
+  
   nav ul li a {
     /*    min-width: 10vw;
     max-width: 120px;
@@ -81,6 +85,25 @@
   }
 }
 
+
+/*
+████████  █████  ██████  ██      ███████ ████████ ███████
+   ██    ██   ██ ██   ██ ██      ██         ██    ██
+   ██    ███████ ██████  ██      █████      ██    ███████
+   ██    ██   ██ ██   ██ ██      ██         ██         ██
+   ██    ██   ██ ██████  ███████ ███████    ██    ███████
+*/
+@media screen and (min-width: 750px) and (max-width: 1280px) {
+  .logo {
+  }
+  nav ul {
+  }
+  nav ul li {
+  flex-basis: 10%;
+  }
+}
+
+
 /*
 ███    ███  ██████  ██████  ██ ██      ███████
 ████  ████ ██    ██ ██   ██ ██ ██      ██
@@ -127,7 +150,7 @@
 
   .logo {
     /*background-color:  aquamarine;*/
-    max-width: 18vw;
+    max-width: 100px;
     width: 100%;
     height: 12vh;
   }
@@ -273,18 +296,7 @@
   }
 }
 
-/*
-████████  █████  ██████  ██      ███████ ████████ ███████
-   ██    ██   ██ ██   ██ ██      ██         ██    ██
-   ██    ███████ ██████  ██      █████      ██    ███████
-   ██    ██   ██ ██   ██ ██      ██         ██         ██
-   ██    ██   ██ ██████  ███████ ███████    ██    ███████
-*/
-@media screen and (min-width: 750px) and (max-width: 1280px) {
-  .logo {
-  max-width: 100px;
-  }
-}
+
 
 /*
 ███    ███  ██████  ██████  ██ ██      ███████
