--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ nav ul li a {
   position: absolute;
   text-align: center;
   /*min-width: 30vw;
+  padding: 0 20px;
   bottom: 280px;
   height: 30vh;
   */
@@ -146,14 +147,15 @@ nav ul li a {
 #hero h1 {
   font-size: 7rem;
   font-weight: 300;
-  padding: 20px;
+  /*padding-bottom: 45px;*/
 }
 
 #hero h2 {
   color: inherit;
   font-size: 2rem;
   font-weight: 300;
-  padding-bottom: 45px;
+  /*padding-bottom: 60px;*/
+ /*padding-bottom: 45px;*/
 }
 
 .movies h2,
