--- a/style.css
+++ b/style.css
@@ -127,16 +127,18 @@ nav ul li a {
 ██       ██████  ██   ████    ██
 */
 .hero-text {
-  border: 5px solid rgb(253, 227, 17);
   background-color: rgba(114, 169, 226, 0.1);
   background-color: rgba(245, 245, 245, 0.1);
-  bottom: 30%;
+  border: 5px solid rgb(253, 227, 17);
+  bottom: 200px;
   color: rgb(253, 227, 17);
   color: whitesmoke;
   cursor: default;
   font-family: 'Lato', sans-serif;
   position: absolute;
   text-align: center;
+  
+   
   /*min-width: 30vw;
   padding: 0 20px;
   bottom: 280px;
