css re-organisation in multiple files

--- a/style.css
+++ b/style.css
@@ -320,10 +320,10 @@ p {
   width: 400px;
 }
 
-.actors .feature .picture {
+/*.actors .feature .picture {
   height: 300px;
   width: 500px;
-}
+}*/
 
 /*
 ██     ██ ██████   █████  ██████  ██████  ███████ ██████  ███████
