--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -3,128 +3,43 @@
 }
 
 /*
-██████  ███████ ███████ ██   ██ ████████  ██████  ██████
-██   ██ ██      ██      ██  ██     ██    ██    ██ ██   ██
-██   ██ █████   ███████ █████      ██    ██    ██ ██████
-██   ██ ██           ██ ██  ██     ██    ██    ██ ██
-██████  ███████ ███████ ██   ██    ██     ██████  ██
-*/
-@media screen and (min-width: 1280px) {
-  nav ul {
-    /*margin-left: 21vw;*/
-  }
-  
-  nav ul li a {
-    /*    min-width: 10vw;
-    max-width: 120px;
-    max-width: 7vw;*/
-    width: 120px;
-    width: 7vw;
-    transition: color .6s ease 0s;
-    transition: background-color .8s ease 0s;
-  }
-
-  nav ul li a:hover {
-    color: rgb(253, 227, 17);
-    /*color: rgb(255, 199, 108);*/
-  }
-  .hero-text {
-    height: 25%;
-    max-width: 35%;
-  }
-  #hero h1 {
-    padding: 10px 20px 0;
-  }
-  #hero h2 {
-  }
-
-  /*
-   ██████   █████  ██      ██      ███████ ██████  ██    ██
-  ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
-  ██   ███ ███████ ██      ██      █████   ██████    ████
-  ██    ██ ██   ██ ██      ██      ██      ██   ██    ██
-   ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
-  */
-  .container {
-    background-color: rgb(38, 38, 38);
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    padding: 0 2%;
-    padding-top: 70px;
-    padding-bottom: 70px;
-    box-sizing: border-box;
-    margin-bottom: 70px;
-  }
-
-  .box {
-    /*background-color: rgb(255, 199, 108);*/
-    /*background-color: rgb(255, 237, 0);*/
-    background-color: rgb(253, 227, 17);
-    color: rgb(38, 38, 38);
-    flex: 1;
-    overflow: hidden;
-    transition: .5s;
-    margin: 0 2%;
-    box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
-    line-height: 0;
-  }
-
-  .box>img {
-    width: 200%;
-    height: calc(100% - 10vh);
-    object-fit: cover;
-    transition: .5s;
-  }
-
-  .box>span {
-    display: block;
-    height: 10vh;
-  }
-
-  .box:hover {
-    flex: 1 1 50%;
-  }
-
-  .box:hover>img {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-
-/*
 ████████  █████  ██████  ██      ███████ ████████ ███████
    ██    ██   ██ ██   ██ ██      ██         ██    ██
    ██    ███████ ██████  ██      █████      ██    ███████
    ██    ██   ██ ██   ██ ██      ██         ██         ██
    ██    ██   ██ ██████  ███████ ███████    ██    ███████
 */
-@media screen and (min-width: 750px) and (max-width: 1280px) {  
+@media screen and (min-width: 750px) and (max-width: 1280px) {
   nav ul li {
-  flex-basis: 10%;
+    flex-basis: 10%;
   }
+
   .hero-text {
     height: 20%;
     max-width: 35%;
   }
+  #hero {
+    background-attachment: local;
+  }
   #hero h1 {
     padding: 0 20px;
   }
+
   #hero h2 {
     padding-bottom: 15px;
   }
+
   #movies::before,
   #actors::before,
   #gallery::before {
     height: 12vh;
     margin-top: -12vh;
   }
-  .wrappers {
-    height: 88vh;
-  }
-}
 
+  /*.wrappers {
+    height: 88vh;
+  }*/
+}
 
 /*
 ███    ███  ██████  ██████  ██ ██      ███████
@@ -151,10 +66,11 @@
   html {
     overflow: scroll;
   }
+
   body {
     overflow: hidden;
   }
-  
+
   header,
   nav,
   nav ul,
@@ -205,32 +121,31 @@
     font-size: 0.9rem;
   }
 
-/*  .hero-text {
+  /*  .hero-text {
     height: 20%;
     max-height: 20%;
   }*/
   #hero {
-    background-attachment: local;
+    /*background-attachment: local;*/
     /* the image is glitching ----
     background-attachment: scroll;*/
   }
+
   .hero-text {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
   }
-  
+
   #hero h1 {
     font-size: 4rem;
-    
   }
+
   #hero h2 {
     font-size: 1.5rem;
-    
   }
-  
-  
+
   /*
   ██     ██ ██████   █████  ██████  ██████  ███████ ██████  ███████
   ██     ██ ██   ██ ██   ██ ██   ██ ██   ██ ██      ██   ██ ██
@@ -238,7 +153,6 @@
   ██ ███ ██ ██   ██ ██   ██ ██      ██      ██      ██   ██      ██
    ███ ███  ██   ██ ██   ██ ██      ██      ███████ ██   ██ ███████
   */
-
   .actors-to-gallery {
     background-position: left;
     background-size: cover;
@@ -252,22 +166,14 @@
 
   .feature p {}
 
-  .picture {
+  /*  .picture {
     height: 45vh;
     width: 90vw;
-    /*
-     
-    height: 250px;
-    width: 320px;
-    margin: 0 auto;
-    text-align: center;*/
-  }
-
-  .actors .feature .picture {
+  }*/
+  /*  .actors .feature .picture {
     height: 200px;
     width: 320px;
-  }
-
+  }*/
   .footer-img {
     height: 50vh;
     width: 100vw;
@@ -324,92 +230,4 @@
     background-size: 50% 50%;
     background-position: right;
   }
-}
-
-
-
-/*
-███    ███  ██████  ██████  ██ ██      ███████
-████  ████ ██    ██ ██   ██ ██ ██      ██
-██ ████ ██ ██    ██ ██████  ██ ██      █████
-██  ██  ██ ██    ██ ██   ██ ██ ██      ██
-██      ██  ██████  ██████  ██ ███████ ███████
-*/
-@media screen and (max-width: 750px) {
-  
-  header,
-  nav,
-  nav ul,
-  .logo-link,
-  .logo
-   {
-    height: 80px;
-  }
-  nav ul li {
-  line-height: 80px;
-  }
-  
-  #hero {
-    height: 1000px;
-    /*pointer-events: none;*/
-    /*cursor: default;*/
-    /*position: relative;*/
-  }
-  
-  .hero-text {
-    height: 150px;
-    max-width: 70%; 
-    padding: 0 20px 10px;
-    
-  }
-  #hero h1 {
-  }
-  #hero h2 {
-    
-  }
-  h3 {
-    font-size: 2.5rem;
-  }
-
-  /*.boxes {
-    margin: 0;
-   }*/
-   .feature {
-     flex-basis: 80%;
-   }
-   
-   .feature3 {
-     margin-top: 150px;
-     /*    margin-top: 100px;
-     margin-bottom: 200px;*/
-   }
-   
-   /*
- █████  ███    ██  ██████ ██   ██  ██████  ██████  ███████
-██   ██ ████   ██ ██      ██   ██ ██    ██ ██   ██ ██
-███████ ██ ██  ██ ██      ███████ ██    ██ ██████  ███████
-██   ██ ██  ██ ██ ██      ██   ██ ██    ██ ██   ██      ██
-██   ██ ██   ████  ██████ ██   ██  ██████  ██   ██ ███████
-*/
-   #movies::before,
-   #actors::before,
-   #gallery::before {
-     content: '';
-     display: block;
-     height: 80px;
-     margin-top: -80px;
-     visibility: hidden;
-   }
-   .wrappers {
-     border: 12px solid whitesmoke;
-     height: 280px;
-     width: 100%;
-   }
-   .hero-to-movies,
-   .movies-to-actors, {
-     background-repeat: no-repeat;
-     background-size: 180% 100%;
-     background-position: bottom;
-     background-attachment: fixed;
-   }
 }
