--- a/desktop.css
+++ b/desktop.css
@@ -1,7 +1,3 @@
-:root {
-  font-size: 16px;
-}
-
 /*
 ██████  ███████ ███████ ██   ██ ████████  ██████  ██████
 ██   ██ ██      ██      ██  ██     ██    ██    ██ ██   ██
@@ -9,7 +5,7 @@
 ██   ██ ██           ██ ██  ██     ██    ██    ██ ██
 ██████  ███████ ███████ ██   ██    ██     ██████  ██
 */
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1281px) {
   nav ul {
     /*margin-left: 21vw;*/
   }
@@ -40,6 +36,26 @@
 
   #hero h2 {}
 
+  /*
+    ██     ██ ██████   █████  ██████  ██████  ███████ ██████  ███████
+    ██     ██ ██   ██ ██   ██ ██   ██ ██   ██ ██      ██   ██ ██
+    ██  █  ██ ██████  ███████ ██████  ██████  █████   ██████  ███████
+    ██ ███ ██ ██   ██ ██   ██ ██      ██      ██      ██   ██      ██
+     ███ ███  ██   ██ ██   ██ ██      ██      ███████ ██   ██ ███████
+    */
+  
+    .hero-to-movies {
+      background-size: 100vw 110%;
+    }
+    .movies-to-actors {
+      background-size: 100vw 100%;
+    }
+    .actors-to-gallery {
+      background-size: 100vw 100%;
+    }
+    
+    
+    
   /*
    ██████   █████  ██      ██      ███████ ██████  ██    ██
   ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
