--- a/mobile.css
+++ b/mobile.css
@@ -1,7 +1,3 @@
-:root {
-  font-size: 16px;
-}
-
 /*
 ███    ███  ██████  ██████  ██ ██      ███████
 ████  ████ ██    ██ ██   ██ ██ ██      ██
@@ -9,7 +5,7 @@
 ██  ██  ██ ██    ██ ██   ██ ██ ██      ██
 ██      ██  ██████  ██████  ██ ███████ ███████
 */
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 480px) {
 
   header,
   nav,
@@ -25,15 +21,8 @@
 
   #hero {
     height: 1000px;
-    /*pointer-events: none;*/
-    /*cursor: default;*/
-    /*position: relative;*/
-  }
-
-  .hero-text {
-    height: 150px;
-    max-width: 70%;
-    padding: 0 20px 10px;
+    background-attachment: fixed;
+    
     
     -webkit-touch-callout: none;
     /* iOS Safari */
@@ -46,6 +35,17 @@
     -ms-user-select: none;
     /* Internet Explorer/Edge */
     user-select: none;
+    
+    /*pointer-events: none;*/
+    /*cursor: default;*/
+    /*position: relative;*/
+  }
+
+  .hero-text {
+    height: 150px;
+    max-width: 70%;
+    padding: 0 20px 10px;
+    
   }
 
   #hero h1 {}
