--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+  font-size: 16px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -165,8 +169,9 @@ nav ul li a {
 #gallery h2 {
   font-family: 'Oswald', sans-serif;
   font-size: 4em;
-  width: 100%;
+  padding: 80px 0;
   text-align: center;
+  width: 100%;
   /*
   color: rgb(253, 227, 17);
   border: solid whitesmoke;
@@ -184,8 +189,8 @@ nav ul li a {
 h3 {
   font-family: 'Oswald', sans-serif;
   font-size: 2.5em;
-  margin-top: 10px;
-  margin-bottom: 40px;
+  margin: 40px 0;
+
 }
 
 /*=== .social-h5 {
@@ -351,21 +356,18 @@ p {
   background-image: url(img/wrapper/bat-wings.jpg);
   height: 100%;
   width: 100%;
-  background-size: 100vw 110%;
 }
 
 .movies-to-actors {
   background-image: url(img/wrapper/city-window.jpg);
   height: 100%;
   width: 100%;
-  background-size: 100vw 100%;
 }
 
 .actors-to-gallery {
   background-image: url(img/wrapper/cartoon.jpg);
   height: 100%;
   width: 100%;
-  background-size: 100vw 100%;
 }
 
 /*
