hero-text (glitch SOLVED)

--- a/mobile.css
+++ b/mobile.css
@@ -20,16 +20,15 @@
   }
 
   #hero {
-    height: 1000px;
-    background-attachment: fixed;
-    
+    height: 800px;
+    background-attachment: scroll;
     background-image: linear-gradient(rgba(68, 64, 64, 0.6),
     rgba(0, 0, 0, 0.4)),
     url(img/batman-hero.jpg);
-    background-size: cover;
+    background-size: 800px 100%;
     background-repeat: no-repeat;
     background-position: top;
-    background-attachment: fixed;
+    /*background-attachment: fixed; --> makes image glitch */
     
     /*pointer-events: none;*/
     /*cursor: default;*/
@@ -40,19 +39,39 @@
   }
 
   .hero-text {
+    background-color: rgba(93, 145, 214, 0.5);
+    background-color: rgba(114, 169, 226, 0.3);
+    background-color: rgba(123, 157, 201, 0.5);
+    bottom: 40%;
     height: 150px;
     max-width: 70%;
     padding: 0 20px 10px;
-    top: 40%;
   }
 
   #hero h1 {}
 
-  #hero h2 {}
+  #hero h2 {
+      font-weight: 400;
+  }
 
   h3 {
     font-size: 1.5rem;
   }
+  
+  .feature p {
+    font-size: 1.2rem;
+    padding: 0 15px;
+  }
+  
+    .picture {
+      height: 250px;
+      width: 350px;
+  }
+  
+  /*  .actors .feature .picture {
+    height: 200px;
+    width: 320px;
+  }*/
 
   /*
  █████  ███    ██  ██████ ██   ██  ██████  ██████  ███████
